--- a/index.html
+++ b/index.html
@@ -1,1 +1,36 @@
-This is a test hello :3
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Autoplay YouTube Video</title>
+<style>
+    body, html {
+        margin: 0;
+        padding: 0;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: #f0f0f0;
+    }
+    .video-container {
+        position: relative;
+        width: 640px; /* Adjust the width as needed */
+        height: 360px; /* Adjust the height as needed */
+    }
+    iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+    }
+</style>
+</head>
+<body>
+<div class="video-container">
+    <iframe src="https://www.youtube.com/embed/0CFSfmQGmqI?autoplay=1&controls=0" frameborder="0" allowfullscreen></iframe>
+</div>
+</body>
+</html>
