--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </head>
 <body>
 <div class="video-container">
-    <iframe src="https://www.youtube.com/embed/0CFSfmQGmqI?autoplay=1&controls=0" frameborder="0" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/0CFSfmQGmqI?autoplay=1&mute=1&controls=0" frameborder="0" allowfullscreen autoplay></iframe>
 </div>
 </body>
 </html>
