--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </head>
 <body>
 <div class="video-container">
-    <iframe src="https://www.youtube.com/embed/0CFSfmQGmqI?autoplay=1&mute=1&controls=0" frameborder="0" allowfullscreen autoplay></iframe>
+    <iframe src="https://www.youtube.com/embed/0CFSfmQGmqI?vq=hd1080&autoplay=1&loop=1&rel=0&fs=0&controls=0&playlist=0CFSfmQGmqI" width="560" height="315" title="ALASTOR SONG "Can't Be Saved" | FabvL [Hazbin Hotel]" frameborder="0"></iframe>
 </div>
 </body>
 </html>
