--- a/index.html
+++ b/index.html
@@ -1,36 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Autoplay YouTube Video</title>
-<style>
-    body, html {
-        margin: 0;
-        padding: 0;
-        height: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background-color: #f0f0f0;
-    }
-    .video-container {
-        position: relative;
-        width: 640px; /* Adjust the width as needed */
-        height: 360px; /* Adjust the height as needed */
-    }
-    iframe {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-    }
-</style>
-</head>
-<body>
-<div class="video-container">
-    <iframe src="https://www.youtube.com/embed/0CFSfmQGmqI?vq=hd1080&autoplay=1&loop=1&rel=0&fs=0&controls=0&playlist=0CFSfmQGmqI" width="560" height="315" title="ALASTOR SONG "Can't Be Saved" | FabvL [Hazbin Hotel]" frameborder="0"></iframe>
-</div>
-</body>
+<audio autoplay preload="auto" loop>
+  <source src="your-audio-file.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
 </html>
