--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html lang="en">
 <audio autoplay preload="auto" loop>
   <source src="Insane.mp3" type="audio/mpeg">
-  Your browser does not support the audio element.
+  <source src="Insane.ogg" type="audio/ogg">
 </audio>
 </html>
