--- a/index.html
+++ b/index.html
@@ -1,7 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Background with Image and Audio</title>
+<style>
+  body {
+    background-color: #000000; /* Black background */
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh; /* Full height of the viewport */
+  }
+  img {
+    max-width: 100%;
+    max-height: 100%;
+  }
+</style>
+</head>
+<body>
 <audio autoplay preload="auto" loop>
   <source src="Insane.mp3" type="audio/mpeg">
   <source src="Insane.ogg" type="audio/ogg">
 </audio>
+<img src="Alastor.gif" alt="Alastor">
+</body>
 </html>
