--- a/index.html
+++ b/index.html
@@ -3,28 +3,32 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Welcome :D</title>
+<title>Hello!</title>
 <style>
-  body {
-    background-color: #000000; /* Black background */
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh; /* Full height of the viewport */
-  }
-  img {
-    max-width: 100%;
-    max-height: 100%;
-  }
+    body, html {
+        height: 100%;
+        margin: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .iframe-container {
+        position: relative;
+        width: 560px; /* Adjust as needed */
+        height: 315px; /* Adjust as needed */
+    }
+    .iframe-container iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+    }
 </style>
 </head>
 <body>
-<audio autoplay preload="auto" loop>
-  <source src="Insane.mp3" type="audio/mpeg">
-  <source src="Insane.ogg" type="audio/ogg">
-</audio>
-<img src="Alastor.gif" alt="Alastor">
+<div class="iframe-container">
+    <iframe src="https://www.youtube.com/embed/0CFSfmQGmqI?autoplay=1&loop=1&controls=0&rel=0&modestbranding=1&showinfo=0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
 </body>
 </html>
